fixes #1084 join our movement clipping on mobile

--- a/frontend/src/pages/Landing/LandingPage.module.scss
+++ b/frontend/src/pages/Landing/LandingPage.module.scss
@@ -274,6 +274,10 @@
       font-size: 80px !important;
       line-height: 70px !important;
     }
+    @media (max-width: $sm) {
+      font-size: 2.7rem !important;
+      line-height: 1 !important;
+    }
   }
 
   .EmailAddressBackgroundImgContainer {
